<resources>
    <string name="app_name">AlwayGo</string>
    <string name="alwaygo">AlwayGo</string>
    <string name="sign_up">Sign Up</string>
    <string name="username_signup">Username</string>
    <string name="email_signup">Email</string>
    <string name="password_signup">Password</string>
    <string name="password_text">At least 8 characters, with 1 number and 1 lowercase letter (no spaces allowed)</string>
    <string name="checkBox_text">I accept the Terms and privacy policy</string>
    <string name="button_create_account">Create Account</string>
    <string name="or_text_signup">or</string>
    <string name="signup_login_text">Already have an account? <b>Login in</b></string>
    <string name="reset_password_text">Reset Password</string>
    <string name="reset_password_text2">Enter the email address you used when you joined and we’ll send you instructions to reset your password.</string>
    <string name="enter_your_amil_address_resetpassword">Enter your amil address</string>
    <string name="reset_password_button_text">Reset password</string>
    <string name="remember_your_password_text">You remember your password? <b>Login in</b></string>
    <string name="check_your_email_text">Check your email</string>
    <string name="check_your_mail_text2">We sent a reset link to example@gmail.com enter 5 digit code that mentioned in the email</string>
    <string name="verify_code_button_text">Verify code</string>
    <string name="search_edittext_home">Search</string>
    <string name="categories_text_home">Categories</string>
    <string name="all_categories_text">All Categories</string>
    <string name="for_you_text_home">For you</string>
    <string name="see_more_text_home">See more</string>
    <string name="recently_viewed_text_home">Recently viewed</string>
    <string name="top_stores_text_home">Top Stores</string>
    <string name="trending_now_text_home">Trending now</string>
    <string name="best_deals_discounts_text_home">Best deals &amp; Discounts</string>
    <string name="discover_text_home">DISCOVER</string>
    <string name="woman_text_category_home">Woman</string>
    <string name="man_text_category_home">Man</string>
    <string name="kid_text_category_home">Kid</string>
    <string name="face_amp_body_text_category_home"><![CDATA[Face & Body]]></string>
    <string name="home_text_category_home">Home</string>
    <string name="outdoor_text_category_home">Outdoor</string>
    <string name="accessories_text_category_home">Accessories</string>
    <string name="technology_text_category_home">Technology</string>
    <string name="categories_page_toolbar">CATEGORIES</string>
    <string name="cart_page_toolbar">Cart</string>
    <string name="select_all_text_cart">Select all</string>
    <string name="add_cart_text">Add cart</string>
    <string name="favorites_toolbar_text">FAVORITES</string>
    <string name="recently_added_favorites_text">Recently Added</string>
    <string name="set_a_new_password">Set a new password</string>
    <string name="create_a_new_password_ensure_it_differs_from_previous_ones_for_security">Create a new password. Ensure it differs from previous ones for security</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="update_password">Update password</string>
    <string name="password_reset">Password reset !</string>
    <string name="you_password_has_been_successfully_reset_click_confirm_to_set_a_new_password">You password has been successfully reset. Click confirm to set a new password</string>
    <string name="confirm_and_back_to_login">Confirm and back to login</string>
    <string name="hi_default_name">Hi, default name</string>
    <string name="default_email">deafut@gmail.com</string>
    <string name="add_number_text2">Add your phone number now to enjoy the best shopping experience.</string>
    <string name="add_number">Add number</string>
    <string name="all_orders">All orders</string>
    <string name="reviews">Reviews</string>
    <string name="for_you">For you</string>
    <string name="recent">Recents</string>
    <string name="profile_details">Profile details</string>
    <string name="address_book">Address book</string>
    <string name="payment_methods">Payment methods</string>
    <string name="security_and_privacy">Security and privacy</string>
    <string name="notifications">Notifications</string>
    <string name="faq">FAQ</string>
    <string name="contact_preferences">Contact preferences</string>
    <string name="gift_cards_and_vouchers"><![CDATA[Gif cards & vouchers]]></string>
    <string name="rate_this_app">Rate this app</string>
    <string name="sign_out">Sign out</string>
    <string name="password_reset_text2">You pasword has been successfully reset. Click confirm to set a new password.</string>
    <string name="set_a_new_password_text2">Create a new password. Ensure it differs from previous ones for security.</string>
    <string name="enter_you_new_password">Enter you new password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="color_text_product_page">Color</string>
    <string name="size_tv_product_page">Size</string>
    <string name="features_tv_product_page">Features</string>
    <string name="reviews_tv_product_page">Reviews</string>
    <string name="overview_and_videos_tv_product_page">Overview and Videos</string>
    <string name="photo_tv_product_page">Photo</string>
    <string name="checkout_tv_product_page">Checkout</string>
    <string name="all_items_favorite_page">All items</string>
    <string name="boards_tv_favorite_page">Boards</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add_bag">Add bag</string>
    <string name="size">Size</string>

</resources>