<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/signUpTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_up"
        android:textColor="@color/blue_500"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/signUpLiner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/signUpTxt">

        <EditText
            android:id="@+id/userNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="22dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/username_signup"
            android:inputType="text" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="22dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/email_signup"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="22dp"
            android:drawableEnd="@drawable/password_toggle"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/password_signup"
            android:inputType="textVisiblePassword" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="22dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/password_text"
            android:textColor="@color/grey_400"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/checkBoxSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/checkBox_text"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/blue_500"
            android:text="@string/button_create_account" />

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider1"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="20dp"
        app:dividerColor="@color/grey_300"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/signUpLiner" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider2"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="37dp"
        app:dividerColor="@color/grey_300"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/signUpLiner"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/or_text_signup"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/divider1"
        app:layout_constraintTop_toBottomOf="@id/signUpLiner" />

    <LinearLayout
        android:id="@+id/socialMediaLiner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/divider1">

        <ImageView
            android:id="@+id/facebookImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:background="@drawable/social_media_bg"
            android:src="@drawable/facebook2" />

        <ImageView
            android:id="@+id/googleImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:background="@drawable/social_media_bg"
            android:src="@drawable/google" />

        <ImageView
            android:id="@+id/appleImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:background="@drawable/social_media_bg"
            android:src="@drawable/apple" />

    </LinearLayout>

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/signup_login_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/socialMediaLiner" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/square_signup_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/square_signup_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>