<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.login_register.ResetPasswordFragment">

    <ImageButton
        android:id="@+id/backToLoginFragmentBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/back_button_bg"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/resetPassLiner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backToLoginFragmentBtn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/reset_password_text"
            android:textColor="@color/blue_500"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/reset_password_text2"
            android:textColor="@color/grey_300"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/enter_your_amil_address_resetpassword"
            android:textColorHint="@color/grey_300"
            app:endIconCheckable="true"
            app:hintTextColor="@color/blue_300">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_reset_password_edittext"
                android:drawableEnd="@drawable/mail_icon"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetPasswordBtn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:backgroundTint="@color/blue_500"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/reset_password_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetPassLiner" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/remember_your_password_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>