<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.register.PasswordResetSuccessFragment">

    <ImageButton
        android:id="@+id/backToSetNewPasswordFragmentBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/back_button_bg"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/setNewPasswordLiner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backToSetNewPasswordFragmentBtn">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/password_reset"
        android:textColor="@color/blue_500"
        android:textSize="28sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/password_reset_text2"
        android:textColor="@color/grey_300"
        android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmPasswordBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="36dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_500"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/confirm_and_back_to_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resetPassLiner" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>